# egit

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  GIT_DIFF.md  PROJECT.md  PULL_REQUESTS_IMPLEMENTATION.md  PULL_REQUESTS_STEP1.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.js
docs/: clone_button.md
migrations/: 001_users.sql  002_sessions.sql  003_repositories.sql  004_pull_requests.sql  005_add_pr_oids.sql
src/: app.rs  auth.rs  db.rs  diff.rs  git.rs  git_routes.rs  lib.rs  main.rs  state.rs  syntax.rs
src/components/: clone_button.rs  delete_repo_button.rs  diff_viewer.rs  file_tree.rs  markdown.rs  mod.rs  navbar.rs  repo_header.rs  repo_tab_bar.rs  theme_switcher.rs
src/diff/: mod.rs  parse.rs  types.rs
src/pages/: home.rs  mod.rs
src/pages/auth/: login.rs  mod.rs  register.rs
src/pages/repo/: blob.rs  commit.rs  commits.rs  create.rs  mod.rs  overview.rs  tree.rs
src/pages/repo/pulls/: detail.rs  list.rs  mod.rs  new.rs
src/pages/user/: profile.rs
src/server/: auth.rs  error.rs  git_routes.rs  middleware.rs  mod.rs  prs.rs  repos.rs  session.rs  shell.rs  syntax.rs
src/server/git/: blob.rs  branch.rs  commit.rs  diff_ops.rs  init.rs  mod.rs  readme.rs  tree.rs
style/: input.css
