[package]
name = "egit"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "egit"
path = "src/main.rs"
required-features = ["ssr"]

[dependencies]
leptos = { version = "0.8", features = ["nonce"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8", features = ["nonce"] }
leptos_axum = { version = "0.8", optional = true }

axum = { version = "0.7", optional = true }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs", "compression-gzip"], optional = true }

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "time", "migrate"], optional = true }

# Git
gix = { version = "0.66", features = ["blocking-io"], optional = true }

# Auth
bcrypt = { version = "0.15", optional = true }
uuid = { version = "1", features = ["v4", "js"] }

# Markdown
pulldown-cmark = { version = "0.11", optional = true }

# Syntax highlighting
syntect = { version = "5", optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }

# Time
time = { version = "0.3", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = { version = "1", optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# Env
dotenvy = { version = "0.15", optional = true }

# HTTP
http = "1"

wasm-bindgen = "=0.2.99"

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos_axum",
    "axum",
    "axum-extra",
    "tokio",
    "tower",
    "tower-http",
    "sqlx",
    "gix",
    "bcrypt",
    "pulldown-cmark",
    "syntect",
    "serde_json",
    "anyhow",
    "tracing-subscriber",
    "dotenvy",
]

[package.metadata.leptos]
output-name = "egit"
site-root = "site"
site-pkg-dir = "pkg"
style-file = "style/main.css"
tailwind-input-file = "style/main.css"
assets-dir = "public"
site-addr = "0.0.0.0:3000"
reload-port = 3001
end2end-cmd = ""
end2end-dir = ""
browserquery = "defaults"
env = "DEV"
bin-features = ["ssr"]
lib-features = ["hydrate"]
