[package]
name = "egit"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "egit"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
leptos_axum = { version = "0.8", optional = true }

axum = { version = "0.8", optional = true, features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie", "typed-header"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-util"], optional = true }
tower = { version = "0.5", optional = true, features = ["full"] }
tower-http = { version = "0.6", optional = true, features = ["fs", "compression-gzip"] }

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "time", "migrate"], optional = true }

# Git
gix = { version = "0.70", default-features = false, features = [
    "basic",
    "extras",
    "blob-diff",
    "blocking-network-client",
    "blocking-http-transport-reqwest-rust-tls",
], optional = true }

# Auth
bcrypt = { version = "0.15", optional = true }
uuid = { version = "1", features = ["v4", "serde", "js"] }

# Markdown
pulldown-cmark = { version = "0.11", optional = true }

# Syntax highlighting
syntect = { version = "5", optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }

# Time
time = { version = "0.3", features = ["serde"] }

# Base64
base64 = { version = "0.22", optional = true }

# HTTP body
bytes = { version = "1", optional = true }

# Error handling
thiserror = "2"
anyhow = { version = "1", optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }

# Env
dotenvy = { version = "0.15", optional = true }

# HTTP
http = "1"

# WASM
wasm-bindgen = { version = "=0.2.100", optional = true }
web-sys = { version = "0.3", optional = true, features = ["Window", "Document", "HtmlElement", "DomStringMap", "HtmlSelectElement", "HtmlFormElement", "Clipboard", "Navigator", "Location"] }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "dep:wasm-bindgen",
    "dep:web-sys",
    "dep:console_error_panic_hook",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:axum-extra",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:sqlx",
    "dep:gix",
    "dep:bcrypt",
    "dep:base64",
    "dep:bytes",
    "dep:pulldown-cmark",
    "dep:syntect",
    "dep:serde_json",
    "dep:anyhow",
    "dep:tracing-subscriber",
    "dep:dotenvy",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.wasm-release]
inherits = "release"
opt-level = "z"
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
bin-target = "egit"
output-name = "egit"
site-root = "site"
site-pkg-dir = "pkg"
site-addr = "0.0.0.0:3000"
reload-port = 3001
tailwind-input-file = "style/input.css"
tailwind-config-file = "tailwind.config.js"
assets-dir = "public"
env = "DEV"
bin-features = ["ssr"]
lib-features = ["hydrate"]
